--- a/src/renderer/components/Layout/Layout.module.scss
+++ b/src/renderer/components/Layout/Layout.module.scss
@@ -18,6 +18,11 @@
     font-family: $primaryHeaderFont;
   }
 
+  input,
+  select {
+    font-family: $baseFont;
+  }
+
   #uploader-root {
     height: 100vh;
     width: 100vw;
