--- a/src/renderer/components/Sidebar/Sidebar.module.scss
+++ b/src/renderer/components/Sidebar/Sidebar.module.scss
@@ -1,20 +1,28 @@
 @import '../../styles/colors.scss';
 
+.icon {
+  margin: 0 auto 0.5rem;
+}
+
 .logo {
   height: 7.5rem;
+  padding-bottom: 1rem;
 }
 
 .menu {
   display: flex;
   flex-direction: column;
   list-style: none;
-  padding: 1rem 0 0;
+  margin-top: 0.5rem;
+  padding: 0;
   text-align: center;
 }
 
 .menuItem {
   border-radius: 3px;
-  margin: 0.2rem -1.5rem;
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem -0.5rem;
   padding: 1rem 0;
 
   &.active {
@@ -25,11 +33,15 @@
   }
 
   &:hover {
-    background-color: $greyLight50;
+    background-color: $greyDark;
     box-shadow: $boxShadowInset;
-    color: $black;
-    font-weight: 700;
+    color: $white;
   }
+}
+
+.nav {
+  border-top: $borderGreyDark;
+  margin: 0 -1rem;
 }
 
 .sidebar {
