--- a/src/renderer/components/Sidebar/Sidebar.module.scss
+++ b/src/renderer/components/Sidebar/Sidebar.module.scss
@@ -45,7 +45,7 @@
 }
 
 .sidebar {
-  background-color: $black95;
+  background-color: $blackLight;
   box-shadow: $boxShadowBlack;
   color: $white;
   grid-area: sidebar;
