--- a/src/renderer/styles/colors.scss
+++ b/src/renderer/styles/colors.scss
@@ -7,6 +7,7 @@ $redDeep: #a21212;
 
 // Monochromes
 $black: #1c1d23;
+$blackLight: #383838;
 $greyDark: #757575;
 $greyLight: #e0e0e0;
 $greyMedium: #bdbdbd;
